@@ -1,5 +1,5 @@
 /*
-    Copyright  2001-2009, Felspar Co Ltd. http://fost.3.felspar.com/
+    Copyright  2001-2016, Felspar Co Ltd. http://support.felspar.com/
     Distributed under the Boost Software License, Version 1.0.
     See accompanying file LICENSE_1_0.txt or copy at
         http://www.boost.org/LICENSE_1_0.txt
@@ -23,7 +23,11 @@ namespace fostlib {
 
         class FOST_CORE_DECLSPEC file_error : public exception {
         public:
-            file_error( const string &message, const string &filename ) throw ();
+            /// Throw an error about the given filename
+            file_error(const string &message, const string &filename) noexcept;
+            /// Thow an error from an error code
+            file_error(const string &message, const boost::filesystem::path &,
+                boost::system::error_code) noexcept;
 
         protected:
             const wchar_t * const message() const throw ();
